# omni-sys

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  Makefile  README  README.md  build.rs  compile_commands.json  libomnicore.a-aarch64-apple-darwin  libomnicore.a-x86_64-unknown-linux-gnu
.devcontainer/: devcontainer.json
src/: lib.rs  omni.cpp  omni.h  test.cpp
tests/: test.rs
