[package]
name = "omni-sys"
version = "0.1.1"
edition = "2021"
authors = ["Jon Huang <biohfj@gmail.com>"]
repository = "https://github.com/HuangFJ/omni-sys"
exclude = ["omnicore", "compile_commands.json", "libomnicore.a-*", ".*"]
description = "rust binding to omnilayer"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

links = "omnicore"
build = "build.rs"

[dependencies]
autocxx = "0.26"
cxx = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[build-dependencies]
autocxx-build = "0.26"
miette = { version = "5", features = ["fancy"] }
regex = "1.10"
glob = "0.3"
reqwest = { version = "0.11", features = ["blocking"] }
